[package]
name = "rmconvert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rmconvert"
path = "src/main.rs"

[lib]
name = "rmconvert"
path = "src/lib.rs"


[dependencies]
nom = "7.1.3"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
svg = "0.13.1"
