[package]
name = "rmconvert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rmconvert"
path = "src/main.rs"

[lib]
name = "rmconvert"
path = "src/lib.rs"


[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.2", features = ["derive", "wrap_help"] }
clio = { version = "0.3.4", features = ["clap-parse"] }
config = { version = "0.13.4", features = ["toml"] }
dotenv = "0.15.0"
env_logger = "0.10.1"
envmnt = "0.10.4"
log = "0.4.20"
nom = "7.1.3"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
svg = "0.13.1"
thiserror = "1.0.50"

[dev-dependencies]
env_logger = "0.10.1"
